--- a/scss/components/_project.scss
+++ b/scss/components/_project.scss
@@ -51,15 +51,13 @@
 
 .sectors p{
  padding-left: 2rem;
- padding-bottom: 1.5rem;    
+ padding-bottom: 1.5rem; 
+ font: 1.5rem;    
 }
+
 
 .container-project h5{
  padding-top: 1.5rem;   
-}
-
-.grid ul{
- padding-left: 1.5rem;   
 }
 
 @media only screen and (min-width: 60em){
@@ -67,4 +65,8 @@
   padding-top: 1.5rem;   
  }
     
+}
+
+ul{
+ padding: 0;   
 }
