--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -4,30 +4,6 @@ html {
   color: $grey;    
 }
 
-@media only screen and (min-width: 60em) {
-
-  html {
-    font-size: 110%;
-  }
-
-}
-
-@media only screen and (min-width: 90em) {
-
-  html {
-    font-size: 120%;
-  }
-
-}
-
-@media only screen and (min-width: 120em) {
-
-  html {
-    font-size: 130%;
-  }
-
-}
-
 h1, h2, h3, h4, h5, h6,
 p, ul, ol, dl, dd, figure,
 blockquote, details, hr,
